// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dotLayout: > computedAmazonView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          566,
          156,
        ],
        [
          576,
          159,
        ],
        [
          566,
          163,
        ],
      ],
      "headArrowPoint": [
        579,
        159,
      ],
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 21,
        "width": 102,
        "x": 432,
        "y": 131,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            436,
            148,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          394,
          159,
        ],
        [
          450,
          159,
        ],
        [
          510,
          159,
        ],
        [
          566,
          159,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "tailArrow": [
        [
          394,
          159,
        ],
        [
          388,
          155,
        ],
        [
          382,
          159,
        ],
        [
          388,
          163,
        ],
      ],
      "tailArrowPoint": [
        380,
        159,
      ],
      "target": "amazon.s3",
    },
  ],
  "height": 294,
  "id": "amazon",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 278,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": null,
      "position": [
        8,
        8,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 404,
    },
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "depth": 1,
      "description": "Amazon is a cloud provider",
      "height": 278,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "system",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        546,
        8,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 404,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 191,
      "id": "cloud.backend",
      "inEdges": [],
      "kind": "component",
      "labels": [],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": "cloud",
      "position": [
        39,
        63,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "S3 is a storage service",
      "height": 191,
      "id": "amazon.s3",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "component",
      "labels": [],
      "level": 1,
      "links": null,
      "outEdges": [],
      "parent": "amazon",
      "position": [
        577,
        63,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "S3",
      "width": 341,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "amazon",
  "width": 958,
}
`;

exports[`dotLayout: > computedCloud3levels 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          579,
          752,
        ],
        [
          589,
          756,
        ],
        [
          579,
          759,
        ],
      ],
      "headArrowPoint": [
        592,
        756,
      ],
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "parent": "cloud.backend",
      "points": [
        [
          412,
          756,
        ],
        [
          468,
          756,
        ],
        [
          523,
          756,
        ],
        [
          579,
          756,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
    {
      "headArrow": [
        [
          241,
          647,
        ],
        [
          238,
          658,
        ],
        [
          234,
          648,
        ],
      ],
      "headArrowPoint": [
        238,
        661,
      ],
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with sso authentification",
      "labelBBox": {
        "height": 37,
        "width": 200,
        "x": 241,
        "y": 556,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            245,
            573,
          ],
          "text": "fetches data in zero trust network",
          "width": 192,
        },
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            245,
            589,
          ],
          "text": "with sso authentification",
          "width": 139,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          231,
          513,
        ],
        [
          233,
          555,
        ],
        [
          235,
          604,
        ],
        [
          237,
          648,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          392,
          656,
        ],
        [
          382,
          659,
        ],
        [
          388,
          650,
        ],
      ],
      "headArrowPoint": [
        379,
        661,
      ],
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labelBBox": {
        "height": 21,
        "width": 79,
        "x": 513,
        "y": 564,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            517,
            581,
          ],
          "text": "fetches data",
          "width": 71,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          559,
          513,
        ],
        [
          529,
          541,
        ],
        [
          495,
          571,
        ],
        [
          462,
          597,
        ],
        [
          439,
          616,
        ],
        [
          414,
          635,
        ],
        [
          389,
          653,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          230,
          310,
        ],
        [
          226,
          320,
        ],
        [
          223,
          310,
        ],
      ],
      "headArrowPoint": [
        226,
        323,
      ],
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labelBBox": {
        "height": 21,
        "width": 62,
        "x": 232,
        "y": 234,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            236,
            251,
          ],
          "text": "manages",
          "width": 54,
        },
      ],
      "parent": null,
      "points": [
        [
          226,
          190,
        ],
        [
          226,
          228,
        ],
        [
          226,
          271,
        ],
        [
          226,
          310,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "headArrow": [
        [
          660,
          310,
        ],
        [
          656,
          320,
        ],
        [
          653,
          310,
        ],
      ],
      "headArrowPoint": [
        656,
        323,
      ],
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labelBBox": {
        "height": 21,
        "width": 107,
        "x": 662,
        "y": 234,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            666,
            251,
          ],
          "text": "opens in browser",
          "width": 99,
        },
      ],
      "parent": null,
      "points": [
        [
          656,
          190,
        ],
        [
          656,
          228,
        ],
        [
          656,
          271,
        ],
        [
          656,
          310,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "headArrow": [
        [
          1044,
          201,
        ],
        [
          1051,
          193,
        ],
        [
          1051,
          204,
        ],
      ],
      "headArrowPoint": [
        1052,
        190,
      ],
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 21,
        "width": 102,
        "x": 1026,
        "y": 405,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            1030,
            422,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          834,
          648,
        ],
        [
          860,
          607,
        ],
        [
          889,
          558,
        ],
        [
          912,
          513,
        ],
        [
          965,
          410,
        ],
        [
          1015,
          288,
        ],
        [
          1048,
          202,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "tail": "odiamond",
      "tailArrow": [
        [
          834,
          648,
        ],
        [
          827,
          651,
        ],
        [
          827,
          658,
        ],
        [
          834,
          655,
        ],
      ],
      "tailArrowPoint": [
        826,
        660,
      ],
      "target": "amazon",
    },
  ],
  "height": 923,
  "id": "cloud3levels",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 2,
      "description": null,
      "height": 648,
      "id": "cloud",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "system",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": null,
      "position": [
        8,
        267,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 988,
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 278,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "kind": "component",
      "labels": [],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud",
      "position": [
        40,
        605,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 924,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Component that allows to query data via GraphQL.",
      "height": 191,
      "id": "cloud.backend.graphql",
      "inEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "kind": "component",
      "labels": [],
      "level": 2,
      "links": null,
      "outEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "parent": "cloud.backend",
      "position": [
        71,
        660,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Graphql API",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The backend storage is a component that stores data.",
      "height": 191,
      "id": "cloud.backend.storage",
      "inEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "kind": "component",
      "labels": [],
      "level": 2,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud.backend",
      "position": [
        591,
        660,
      ],
      "shape": "storage",
      "tags": null,
      "technology": null,
      "title": "Backend Storage",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The admin panel is a webapp that allows support staff to manage customer data.",
      "height": 191,
      "id": "cloud.frontend.adminPanel",
      "inEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "component",
      "labels": [],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        55,
        322,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Admin Panel Webapp",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The customer dashboard is a webapp that allows customers to view their data.",
      "height": 191,
      "id": "cloud.frontend.dashboard",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "kind": "component",
      "labels": [],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        485,
        322,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Customer Dashboard Webapp",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 191,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "parent": null,
      "position": [
        55,
        0,
      ],
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 191,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "parent": null,
      "position": [
        485,
        0,
      ],
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 191,
      "id": "amazon",
      "inEdges": [
        "cloud.backend.storage:amazon",
      ],
      "kind": "system",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        915,
        0,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 341,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 1256,
}
`;

exports[`dotLayout: > computedCloudView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          1153,
          414,
        ],
        [
          1163,
          418,
        ],
        [
          1153,
          421,
        ],
      ],
      "headArrowPoint": [
        1165,
        418,
      ],
      "id": "cloud.frontend:cloud.backend",
      "label": "[...]",
      "labelBBox": {
        "height": 21,
        "width": 28,
        "x": 1065,
        "y": 389,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            1069,
            406,
          ],
          "text": "[...]",
          "width": 20,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          985,
          418,
        ],
        [
          1039,
          418,
        ],
        [
          1098,
          418,
        ],
        [
          1153,
          418,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "headArrow": [
        [
          748,
          310,
        ],
        [
          751,
          320,
        ],
        [
          742,
          314,
        ],
      ],
      "headArrowPoint": [
        752,
        323,
      ],
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labelBBox": {
        "height": 21,
        "width": 107,
        "x": 715,
        "y": 234,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            719,
            251,
          ],
          "text": "opens in browser",
          "width": 99,
        },
      ],
      "parent": null,
      "points": [
        [
          664,
          190,
        ],
        [
          689,
          229,
        ],
        [
          719,
          273,
        ],
        [
          745,
          312,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          889,
          314,
        ],
        [
          880,
          320,
        ],
        [
          883,
          310,
        ],
      ],
      "headArrowPoint": [
        879,
        323,
      ],
      "id": "support:cloud.frontend",
      "label": "manages",
      "labelBBox": {
        "height": 21,
        "width": 62,
        "x": 943,
        "y": 234,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            947,
            251,
          ],
          "text": "manages",
          "width": 54,
        },
      ],
      "parent": null,
      "points": [
        [
          967,
          190,
        ],
        [
          942,
          229,
        ],
        [
          912,
          273,
        ],
        [
          886,
          312,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          351,
          180,
        ],
        [
          343,
          173,
        ],
        [
          354,
          174,
        ],
      ],
      "headArrowPoint": [
        340,
        172,
      ],
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 21,
        "width": 102,
        "x": 573,
        "y": 234,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            577,
            251,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          1165,
          317,
        ],
        [
          1122,
          296,
        ],
        [
          1076,
          278,
        ],
        [
          1031,
          267,
        ],
        [
          980,
          255,
        ],
        [
          616,
          269,
        ],
        [
          566,
          259,
        ],
        [
          482,
          243,
        ],
        [
          465,
          223,
        ],
        [
          386,
          191,
        ],
        [
          375,
          186,
        ],
        [
          363,
          181,
        ],
        [
          352,
          177,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "tailArrow": [
        [
          1165,
          317,
        ],
        [
          1168,
          323,
        ],
        [
          1175,
          322,
        ],
        [
          1172,
          316,
        ],
      ],
      "tailArrowPoint": [
        1177,
        323,
      ],
      "target": "amazon",
    },
  ],
  "height": 553,
  "id": "cloudView",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 278,
      "id": "cloud",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "system",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": null,
      "position": [
        614,
        267,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 923,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 191,
      "id": "cloud.frontend",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "component",
      "labels": [],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "parent": "cloud",
      "position": [
        645,
        322,
      ],
      "shape": "browser",
      "tags": null,
      "technology": null,
      "title": "Frontend",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 191,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "kind": "component",
      "labels": [],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": "cloud",
      "position": [
        1164,
        322,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 191,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend",
      ],
      "parent": null,
      "position": [
        430,
        0,
      ],
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 191,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend",
      ],
      "parent": null,
      "position": [
        859,
        0,
      ],
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 191,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon",
      ],
      "kind": "system",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 341,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 1545,
}
`;

exports[`dotLayout: > computedIndexView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          314,
          291,
        ],
        [
          317,
          302,
        ],
        [
          308,
          296,
        ],
      ],
      "headArrowPoint": [
        319,
        304,
      ],
      "id": "customer:cloud",
      "label": "opens in browser",
      "labelBBox": {
        "height": 21,
        "width": 107,
        "x": 291,
        "y": 234,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            295,
            251,
          ],
          "text": "opens in browser",
          "width": 99,
        },
      ],
      "parent": null,
      "points": [
        [
          237,
          190,
        ],
        [
          261,
          223,
        ],
        [
          287,
          260,
        ],
        [
          311,
          294,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          569,
          316,
        ],
        [
          558,
          317,
        ],
        [
          566,
          310,
        ],
      ],
      "headArrowPoint": [
        555,
        319,
      ],
      "id": "support:cloud",
      "label": "manages",
      "labelBBox": {
        "height": 21,
        "width": 62,
        "x": 733,
        "y": 234,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            737,
            251,
          ],
          "text": "manages",
          "width": 54,
        },
      ],
      "parent": null,
      "points": [
        [
          861,
          176,
        ],
        [
          770,
          218,
        ],
        [
          659,
          270,
        ],
        [
          567,
          313,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          523,
          199,
        ],
        [
          532,
          193,
        ],
        [
          529,
          203,
        ],
      ],
      "headArrowPoint": [
        534,
        190,
      ],
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 21,
        "width": 102,
        "x": 506,
        "y": 234,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            510,
            251,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          461,
          293,
        ],
        [
          482,
          263,
        ],
        [
          505,
          230,
        ],
        [
          526,
          201,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "tail": "odiamond",
      "tailArrow": [
        [
          461,
          293,
        ],
        [
          454,
          295,
        ],
        [
          454,
          303,
        ],
        [
          460,
          300,
        ],
      ],
      "tailArrowPoint": [
        453,
        304,
      ],
      "target": "amazon",
    },
  ],
  "height": 494,
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 191,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud",
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 191,
      "id": "cloud",
      "inEdges": [
        "support:cloud",
        "customer:cloud",
      ],
      "kind": "system",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud:amazon",
      ],
      "parent": null,
      "position": [
        215,
        303,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 191,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud",
      ],
      "parent": null,
      "position": [
        859,
        0,
      ],
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 191,
      "id": "amazon",
      "inEdges": [
        "cloud:amazon",
      ],
      "kind": "system",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        430,
        0,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 341,
    },
  ],
  "tags": null,
  "title": "",
  "width": 1201,
}
`;
